--- a/pluga.html
+++ b/pluga.html
@@ -131,9 +131,10 @@
             <!-- hero content section  -->
             <div class="hero-content">
                 <div class="content-header">
-                    <h1 style="background-color: transparent;">Hi dear. For Nail Treatment | Nail polishing | Nail decoration & more...We are at your service.</h1>
+                    <h1 style="background-color: transparent;">Hi dear, we are your trusted Nail care specialists</h1>
                     <p style="background-color: transparent;">
-                        You are at the right place at the right time, for all nail needs. You can also book us for your special occasions from our Booking section.
+                         For Nail Treatment | Nail polishing | Nail decoration & more on Nail care
+                    <p style="background-color: transparent;"> ,we are at your service. You can also book us for your special occasions from our Booking section.
                     </p>
 
 
